For any further change descriptions, see the Git logs.

2007-12-11  Jim Menard  <jim@iamplify.com>

	* lib/midilib/io/seqreader.rb: Fixed text method and added default
	implementation of key_signature.

2007-12-09  Jim Menard  <jim@iamplify.com>

	* examples/measures_mbt.rb: Added.

2007-12-09  Jim Menard  <jim@iamplify.com>

	* lib/midilib/event.rb: Added code that fixes bpm calculation
	bugs, and his TimeSig and KeySig classes.

	* lib/midilib/measure.rb: Added.

	* lib/midilib/sequence.rb: Fixed clock. Added get_measures method.

2007-12-09  Jim Menard  <jim@iamplify.com>

	* lib/midilib/event.rb: added program_change? and
	print_channel_numbers_from_one to Event.

2007-03-17  Jim Menard  <jimm@io.com>

	* Version 1.0.0 released. I will no longer be maintaining this
	change log; the Subversion comments should be sufficient.

2006-08-20  Jim Menard  <jimm@io.com>

	* lib/midilib/event.rb (PolyPressure::initialize): Fixed the
	misspelled POLY_PRESSURE cosntant, thanks to Mario Pehle
	<rubyforge.org@errorinitus.de>.

2006-05-15  Jim Menard  <jimm@localhost.localdomain>

	* test/test.mid: created (copied examples/from_scratch.mid).

2005-03-21  Jim Menard  <jimm@io.com>

	* Version 0.8.4 released.

	* lib/midilib/event.rb (Realtime::initialize): set @is_realtime
	to true, not false.
	(SystemCommon::initialize): moved @is_system = true to here
	(SystemExclusive::initialize): ...from here.

2005-03-20  Jim Menard  <jimm@io.com>

	* lib/midilib/sequence.rb (Sequence::note_to_delta): created.
	(Sequence::note_to_length): created.
	(Sequence::length_to_delta): created.

	* examples/from_scratch.rb: created.

2004-07-16  Jim Menard  <jimm@io.com>

	* Version 0.8.3 released.

2004-07-10  Jim Menard  <jimm@io.com>

	* lib/midilib/event.rb (NoteEvent::note_to_s): created.
	(Event::number_to_s): created.
	(Event): added @print_note_names and @print_decimal_numbers
	attributes.
	(to_s all classes): use @print_note_names and @print_decimal_numbers
