@@ -1,3 +1,41 @@
+= midilib for Sonic Pi
+
+FORK of minilib for Sonic Pi and Ruby 3.x
+
+There is couple of helper method defined in addition to normal midilib methods (See sonicpi.rb):
+
+* midi_to_seq
+* midi_to_hash
+* play_midi
+
+Example usage:
+```
+load "~/midilib/sonicpi.rb"
+
+test_midi = ENV['HOME']+'/midilib/examples/pinnin_valssi.mid'
+
+use_bpm 120
+
+# Parse to hash
+midi_hash = midi_to_hash test_midi
+
+print midi_hash.keys
+print midi_hash
+
+2.times do
+  with_fx :reverb, room: 0.7 do
+    with_fx :wobble, phase: 1.0, smooth: 0.7, amp: 0.8 do
+      # Play directly or from preparsed hash
+      play_midi test_midi, [:chiplead, :chipbass]
+    end
+  end
+  # Midi tracks are played in separate threads so sleep until tracks are finished
+  sleep midi_hash[:track_lengths].max
+end
+```
+
+For other thigs see minilib documentation:
+
 = midilib
 
 midilib is a pure Ruby MIDI library useful for reading and writing standard
