@@ -1,7 +1,7 @@
 # Writes MIDI files.
 
-require 'midilib/event'
-require 'midilib/utils'
+require_relative  '../event'
+require_relative  '../utils'
 
 module MIDI
 
@@ -9,10 +9,10 @@ module MIDI
 
     class SeqWriter
 
-      def initialize(seq, midi_format = 1, proc = nil) # :yields: num_tracks, index
+      def initialize(seq, midi_format = 1, &block) # :yields: num_tracks, index
         @seq = seq
         @midi_format = midi_format || 1
-        @update_block = block_given?() ? Proc.new() : proc
+        @update_block = block_given?() ? block : lambda { }
       end
 
       # Writes a MIDI format 1 file.
