@@ -1,3 +1,7 @@
+2020-05-27 amiika
+
+FORKED midilib for ruby>3.0 and Sonic Pi
+
 For any further change descriptions, see the Git logs.
 
 2007-12-11  Jim Menard  <jim@iamplify.com>
